--- a/Include/Appendices/Appendix-B.tex
+++ b/Include/Appendices/Appendix-B.tex
@@ -34,22 +34,17 @@
 \imgfig[1]{Figures/Pictures/APP1/KT_TSLA.pdf}{Distribution of the strike prices and time to maturities for the 100 random points in the test set for TSLA.}
 
 
-
-
-
-
-
-\section*{App2 1}
+\section*{\nameref{Ch:app2}}
 \imgfig[1]{Figures/Pictures/Application2/linje_C.pdf}{GOOG's real option prices plotted against the predictions of the neural network. The black line is the theoretical best regression whereas the blue line is the achieved regression.}
 
 
-\section*{App2 2}
+\section*{\nameref{sec:no_restric}}
 \imgfig[1]{Figures/Pictures/Application2/linje_C2.pdf}{GOOG's real option prices plotted against the predictions of the neural network. The black line is the theoretical best regression whereas the blue line is the achieved regression.}
 
 
 
-\section*{App2 3}
-\imgfig[1]{Figures/Pictures/Application2/fejl_C32.pdf}{MSE, MAE, and MAPE on traning- and validation set for GOOG on 1200 epochs.}
+\section*{\nameref{Sec.App2:Stock}}
+\imgfig[1]{Figures/Pictures/Application2/fejl_C32.pdf}{MSE, MAE, and MAPE on training- and validation set for GOOG on 1200 epochs.}
 
 \imgfig[1]{Figures/Pictures/Application2/linje_C32.pdf}{GOOG's real option prices plotted against the predictions of the neural network. The black line is the theoretical best regression whereas the blue line is the achieved regression.}
 
