--- a/Include/Mainmatter/3-.tex
+++ b/Include/Mainmatter/3-.tex
@@ -175,4 +175,4 @@ In short, \autoref{Thm:UAT} states that it is possible to approximate any one di
 
 Another advantage of the sigmoid function is that \citep{Barron} provides results stating that the approximation error when using the sigmoid function is bounded by $C_f/\sqrt{n}$ where $C_f$ can be regarded as a constant and $n$ the number of nodes. This result thus indicates that as the number of nodes increase, the approximation error decreases. Even though this is only stated for the sigmoid function, \citep[s. 117]{Barron} states that similar results can be obtained for multiple other activation functions.
 
-Despite the potential effectiveness of the single-layer neural networks, their practicality is limited due to their exponential increase in dimension. Moreover, their high susceptibility to overfitting adds to their impracticality. When designing a neural network, a fundamental question arises regarding the optimal trade-off between width and depth, where width and depth represents number of nodes in the layers and number of layers, respectively. Should one choose a narrow and deep network with multiple layers but fewer nodes per layer, or a shallow and wide network? Empirical evidence suggest that depth plays a crucial role in the performance of a neural network. Deep architectures tend to result in more complex models that are challenging to achieve with shallow networks, \citep{REOS}. In fact, Theorem 1 in \citep{REOS} states that the approximation of a function in a two layer neural network will require exponentially many nodes compared to a three layered neural network to gain the same accuracy. Hence, a narrow and deep neural network is often preferred.
+Despite the potential effectiveness of the single-layer neural networks, their practicality is limited due to their exponential increase in dimension. Moreover, their high susceptibility to overfitting, especially when aiming for comparable accuracy to that of multi-layered networks, adds to their impracticality. When designing a neural network, a fundamental question arises regarding the optimal trade-off between width and depth, where width and depth represents number of nodes in the layers and number of layers, respectively. Should one choose a narrow and deep network with multiple layers but fewer nodes per layer, or a shallow and wide network? Empirical evidence suggest that depth plays a crucial role in the performance of a neural network. Deep architectures tend to result in more complex models that are challenging to achieve with shallow networks, \citep{REOS}. In fact, Theorem 1 in \citep{REOS} states that the approximation of a function in a two layer neural network will require exponentially many nodes compared to a three layered neural network to gain the same accuracy. Hence, a narrow and deep neural network is often preferred.
