--- a/Include/Mainmatter/Conclusion.tex
+++ b/Include/Mainmatter/Conclusion.tex
@@ -2,10 +2,10 @@
 % Theory
 Throughout the project, theory regarding calibration, finite difference, and neural networks have been introduced and applied. What these methods have in common is that they are all numerical methods, meaning that even given a problem which does not have an analytical solution, these methods can be used to approximate a solution. More precisely, it has been described how neural networks can be used as function approximators, where they, in this project, have been used to approximate both the function of the implied volatility and the option prices. Furthermore, theory regarding how the implied volatility can be used to derive the risk-neutral density function has been introduced. Moreover, it was described how this density could be used to predict option prices. 
 
-As shown in \autoref{Ch.5}, it is possible to approximate an implied volatility surface with good accuracy with a maximum error of $6.4\%$. Moreover, it could be concluded that when using the implied volatility, its derivatives, determined by finite difference, and derivatives of the Black Scholes option pricing formula, the risk-neutral density was not a smooth curve integrating to one as desired. Especially when diverging from ATM the risk-neutral densities became increasingly distorted and fluctuated more significantly. This also affected the option prices predicted using the risk-neutral density, as these had a mean percentage error of at least $100\%$. Hence, concluding that this method did not give ideal results, presumably caused by multiple different factors such as using multiple numerical methods or insufficient data.
+As shown in \autoref{Ch.5}, it is possible to approximate an implied volatility surface with good accuracy with a maximum percentage error of $6.4\%$. Moreover, it could be concluded that when using the implied volatility, its derivatives, determined by finite difference, and derivatives of the Black Scholes option pricing formula, the risk-neutral density was not a smooth curve integrating to one as desired. Especially when diverging from ATM the risk-neutral densities became increasingly distorted and fluctuated more significantly. This also affected the option prices predicted using the risk-neutral density, as these had a mean percentage error of at least $100\%$. Hence, concluding that this method did not give ideal results, presumably caused by multiple different factors such as using multiple numerical methods, insufficient data or the assumption of stationarity.
 
 % Neural networks
-Additionally, as shown in \autoref{Ch:app2}, it is also possible to directly construct a neural network for the option pricing function. This method achieved better results than the other method, with a mean percentage error of at most $10\%$. Specifically, the neural network which had strike price, time to maturity, and stock price as input variables performed better than the ones without stock price as an input.
+Additionally, as shown in \autoref{Ch:app2}, it is also possible to directly construct a neural network for the option pricing function. This method achieved better results than the other method, with a MAPE of at most $10\%$. Specifically, the neural network which did not have stock price as an input variable and had a restriction on the time to maturity performed better than the others. Given these results, if we were to explore this topic further our focus would be on this network or changing the assumption for the other method to determine if its performance could be improved.
 
 We can further conclude that there are both advantages and disadvantages of using these methods. A clear disadvantage of using neural networks is that there is a possibility of them predicting option prices that are not arbitrage-free. This is not desirable and could perhaps be mitigated given higher quality data given that one were to work with it in the future. Furthermore, it is clear that using multiple numerical methods followed by each other results in a large percentage error. However, there are also some advantages, such as the fast computations and as seen in \autoref{Ch:app2} when using only few approximations the method gives a good prediction of the option prices. 
 
